--- a/index.ipynb
+++ b/index.ipynb
@@ -37,11 +37,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7.]\n",
+      " [7.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[7.],\n",
+       "        [7.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution:\n"
+    "# Solution:\n",
+    "import numpy as np\n",
+    "sold = np.matrix([[29, 41], [23,41]])\n",
+    "prices = np.matrix([490, 448])\n",
+    "\n",
+    "A_inv = np.linalg.inv(sold)\n",
+    "X = A_inv.dot(prices.T)\n",
+    "print(X)\n",
+    "\n",
+    "np.linalg.solve(sold, prices.T)\n"
    ]
   },
   {
@@ -68,12 +97,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10.]\n",
+      " [14.]]\n",
+      "[[10.]\n",
+      " [14.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a system of equations\n",
-    "\n"
+    "A = np.matrix([[12, 3], [8, 3]])\n",
+    "B = np.matrix([162, 122])\n",
+    "\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "X = A_inv.dot(B.T)\n",
+    "print(X)\n",
+    "print(np.linalg.solve(A, B.T))\n"
    ]
   },
   {
@@ -104,21 +150,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[2.],\n",
+       "        [4.],\n",
+       "        [1.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create a system of equations\n",
-    "\n"
+    "A = np.matrix([[1,1,1,], [0.5, 0.75, 1.25], [-2, 1, 0]])\n",
+    "B = np.matrix([7, 5.25, 0])\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "X = A_inv.dot(B.T)\n",
+    "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[2.],\n",
+       "        [4.],\n",
+       "        [1.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Explain your answer\n"
+    "np.linalg.solve(A, B.T)"
    ]
   },
   {
@@ -140,20 +215,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[-420.],\n",
+       "        [1800.],\n",
+       "        [-140.]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create a system of equations\n"
+    "A = np.matrix([[1,1,1], [.1, .2, .3], [-1, 0, 3]])\n",
+    "B = np.matrix([1240, 276, 0])\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "X = A_inv.dot(B.T)\n",
+    "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[-420.],\n",
+       "        [1800.],\n",
+       "        [-140.]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Explain your answer\n"
+    "np.linalg.solve(A, B.T)"
    ]
   },
   {
@@ -181,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
